feat: add inheart theme initial settings

--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 /*
-Theme Name: Inheart
-Author: inheart.memorial
+	Theme Name: Inheart
+	Author: inheart.memorial
+	Description: The code contains comments. These comments describe which section each code part relates to and also include the exact place where you can edit these sections in the Admin Console.
+	Author URI: https://inheart.memorial/
 */
