fix: scss errors, dequeue classic-theme-styles css.

--- a/src/scss/components/base.scss
+++ b/src/scss/components/base.scss
@@ -16,7 +16,7 @@ body {
 	height: auto;
 	font-family: $ff;
 	font-size: $fs-sm;
-	line-height: $lh;
+	line-height: $lh-base;
 	color: $black;
 	background-color: $white;
 
