feat: add fonts

--- a/src/scss/components/vars.scss
+++ b/src/scss/components/vars.scss
@@ -14,8 +14,8 @@ $container-xl: 1280px;
 $container-padding: 16px;
 
 // Font families.
-$ff			: Arial, sans-serif;
-$ff-title	: Arial, sans-serif;
+$ff			: 'Grafita-Normal', Arial, sans-serif;
+$ff-title	: 'Calvino-Grande', Arial, sans-serif;
 
 // Font sizes.
 $fs-xs	: 12px;
