--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,6 +7,7 @@
 
 // Theme base styles.
 @import 'components/base';
+@import 'components/forms';
 @import 'components/buttons';
 
 // Theme common styles.
