feat: add registration, activation and resend activation link logic.

--- a/src/scss/components/typography.scss
+++ b/src/scss/components/typography.scss
@@ -68,7 +68,7 @@ h6, .h6 {
 
 a {
 	display: inline-block;
-	text-decoration: underline;
+	text-decoration: none;
 	transition: color ease-out $tr;
 
 	&:hover {
