--- a/src/scss/components/forms.scss
+++ b/src/scss/components/forms.scss
@@ -20,6 +20,49 @@ label.label {
 	position: relative;
 	margin-bottom: 21px;
 
+	&-checkbox {
+		position: relative;
+		display: block;
+		font-size: $fs-xs;
+		line-height: 1.16;
+		color: $light-green;
+		padding-left: 25px;
+
+		&::before,
+		&::after {
+			content: '';
+			position: absolute;
+			top: 50%;
+			transform: translateY(-50%);
+			left: 0;
+			width: 16px;
+			height: 16px;
+		}
+
+		&::before {
+			display: block;
+			background-color: $light-green;
+			border-radius: $radius-checkbox;
+		}
+
+		&::after {
+			display: none;
+			background-image: url('../img/check-white.svg');
+			background-size: 100%;
+			background-position: center;
+			background-repeat: no-repeat
+		}
+
+		a {
+			display: inline;
+			color: $bright-yellow;
+
+			&:hover {
+				color: $dark-yellow
+			}
+		}
+	}
+
 	&.error {
 		input {
 			&[type="text"],
@@ -59,6 +102,25 @@ input {
 		}
 	}
 
+	&[type="checkbox"] {
+		position: absolute;
+		width: 0;
+		height: 0;
+		opacity: 0;
+		pointer-events: none;
+		z-index: -10;
+
+		&:checked ~ label {
+			&::before {
+				background-color: $dark-yellow
+			}
+
+			&::after {
+				display: flex
+			}
+		}
+	}
+
 	&::placeholder {
 		font-family: $ff;
 		font-size: $fs-md;
@@ -84,6 +146,10 @@ input {
 	&:hover {
 		opacity: 0.7
 	}
+}
+
+.checkbox-wrapper {
+	padding: 0 16px
 }
 
 .lostpass-wrapper {
