--- a/src/scss/pages/auth.scss
+++ b/src/scss/pages/auth.scss
@@ -1,10 +1,34 @@
 @import '../components/vars';
 
-.main.login {
+.main.auth {
 	padding: 40px 0
 }
 
 .auth {
+	&.login {
+		.auth-illustration {
+			@media (min-width: $lg) {
+				padding-left: 80px
+			}
+
+			&-inner {
+				max-width: 490px
+			}
+		}
+	}
+
+	&.register {
+		.auth-illustration {
+			@media (min-width: $lg) {
+				padding-left: 74px
+			}
+
+			&-inner {
+				max-width: 571px
+			}
+		}
+	}
+
 	&-form {
 		width: 100%;
 		max-width: 370px;
@@ -26,8 +50,7 @@
 			display: flex;
 			position: relative;
 			width: 50%;
-			background-color: $deep-green;
-			padding-left: 80px
+			background-color: $deep-green
 		}
 
 		&::before {
@@ -41,12 +64,97 @@
 			background-color: inherit
 		}
 
-		&-login {
-			.auth-illustration-inner {
-				position: relative;
-				width: 100%;
-				max-width: 490px
+		&-inner {
+			position: relative;
+			width: 100%
+		}
+	}
+
+	&-additional {
+		width: 100%;
+		max-width: 370px;
+
+		&-title {
+			width: 100%;
+			padding: 0 11px;
+			margin-bottom: 19px;
+			opacity: 0.5;
+
+			&-text {
+				font-size: $fs-sm;
+				line-height: 1.71;
+				color: $light-green;
+				margin: 0 10px
+			}
+
+			&-line {
+				flex-grow: 1;
+				height: 1px;
+				background-color: $light-green;
+				transform: translateY(2px)
+			}
+		}
+
+		&-option {
+			font-size: $fs-sm;
+			line-height: 1.71;
+			color: $light-green;
+			margin-top: 20px;
+			text-align: center;
+			opacity: 0.8;
+
+			a {
+				color: $bright-yellow;
+
+				&:hover {
+					color: $dark-yellow
+				}
 			}
 		}
 	}
+}
+
+.form-register {
+	.checkbox-wrapper {
+		margin-bottom: 33px
+	}
+}
+
+.registration-success-inner {
+	position: relative;
+	width: 100%;
+	max-width: 673px;
+	margin: 0 auto;
+
+	img {
+		max-width: 197px;
+		margin-bottom: 44px
+	}
+
+	h1, h2, h3,
+	h4, h5, h6 {
+		color: $light-green;
+		margin-bottom: 14px
+	}
+
+	p {
+		color: rgba(195, 218, 226, 0.5);
+		margin-bottom: 14px;
+
+		&:last-child {
+			margin-bottom: 0
+		}
+	}
+
+	a {
+		color: $dark-yellow;
+
+		&:hover {
+			color: $bright-yellow
+		}
+	}
+}
+
+.activation-success {
+	width: 100%
 }
