feat: add Step 1 main form validation.
- add URL step param change;
- add input type date icon;
- add short file name on photo upload.

--- a/src/scss/components/forms.scss
+++ b/src/scss/components/forms.scss
@@ -281,3 +281,24 @@ input {
 		margin-bottom: 20px
 	}
 }
+
+.input-date-wrapper {
+	position: relative;
+	display: block;
+
+	&::after {
+		content: '';
+		position: absolute;
+		top: 50%;
+		right: 16px;
+		transform: translateY(-50%);
+		width: 24px;
+		height: calc(100% - 2px);
+		background-color: $white;
+		pointer-events: none;
+		background-image: url(../img/calendar.svg);
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: contain
+	}
+}
