--- a/src/scss/components/vars.scss
+++ b/src/scss/components/vars.scss
@@ -53,7 +53,7 @@ $disabled-text		: #91A6A3;
 
 // Colors - Background.
 $very-dark-green	: #011C1A;
-$a-bit-blue-white	: #F7FBFC;
+$a-bit-blue-white	: #F7FAFC;
 
 // Colors - Grayscale.
 $black-for-text		: #2D2D2D;
