--- a/src/scss/pages/new-memory.scss
+++ b/src/scss/pages/new-memory.scss
@@ -8,6 +8,7 @@
 @import '../../../node_modules/cropperjs/dist/cropper.min';
 @import '../new-memory/step-1';
 
+@import '../new-memory/step-2';
 
 .new-memory {
 	background-color: $a-bit-blue-white;
@@ -21,8 +22,16 @@
 			display: block
 		}
 
+		&-0 .new-memory-step-desc {
+			font-size: $fs-lg
+		}
+
 		&-1 .new-memory-step-desc {
 			margin-bottom: 20px
+		}
+
+		&-2 .new-memory-step-desc {
+			max-width: 630px
 		}
 
 		&-suptitle {
@@ -43,104 +52,109 @@
 			width: 100%;
 			max-width: 503px;
 			margin-bottom: 54px;
-			font-size: $fs-lg
+			opacity: 0.8
 		}
 	}
 
-	.popup {
-		display: flex;
-		padding: 100px $container-padding;
-		justify-content: center;
-		align-items: center;
-		position: fixed;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		z-index: 100;
-		background-color: rgba(0, 0, 0, 0.81);
-		cursor: pointer;
-		overflow-y: auto;
-
-		&-inner {
-			width: 100%;
-			max-width: 800px;
-			margin: auto 0;
-			background-color: $white;
-			border-radius: $radius-theme;
-			overflow: hidden;
-			cursor: auto
+	.sections {
+		&-wrapper {
+			max-width: 860px;
+			padding: 53px 95px 53px 0
 		}
 
-		&-photo-wrapper {
-			height: 662px;
-			overflow: hidden;
+		&-sidebar {
+			width: 245px
+		}
 
-			img {
-				max-width: 100%;
-				max-height: 100%
+		&-added {
+			margin-bottom: 40px;
+
+			.section {
+				color: $very-dark-green;
+				background-color: $a-bit-blue-white;
+
+				&:hover button.section-drag {
+					display: block
+				}
+
+				button.section-add {
+					display: none
+				}
+
+				button.section-remove {
+					display: block
+				}
 			}
 		}
 
-		&-buttons {
-			padding: 42px 0 48px
+		&-content {
+			// Minus sidebar column width.
+			width: calc(100% - 245px);
+			padding-left: 55px
 		}
 
-		.cropper-modal {
-			opacity: 0.6
+		&-title {
+			font-size: $fs-sm;
+			margin-bottom: 8px
+		}
+	}
+
+	.section {
+		position: relative;
+		font-size: $fs-sm;
+		color: $a-bit-blue-white;
+		padding: 12px 11px 12px 20px;
+		border: 3px solid $a-bit-blue-white;
+		border-radius: $radius-langs;
+		background-color: $very-dark-green;
+
+		&:hover {
+			.section-drag {
+				opacity: 1
+			}
 		}
 
-		.cropper-face,
-		.cropper-view-box {
-			border-radius: 200px
+		&:not(:last-child) {
+			margin-bottom: 2px
 		}
 
-		.cropper-view-box {
-			outline: none
+		&-label {
+			width: calc(100% - 38px)
 		}
 
-		.cropper-dashed,
-		.cropper-center,
-		.cropper-line,
-		.cropper-point.point-e,
-		.cropper-point.point-n,
-		.cropper-point.point-w,
-		.cropper-point.point-s {
-			display: none
-		}
-
-		.cropper-point {
-			width: 11px;
-			height: 11px;
+		button {
 			background-color: transparent;
-			opacity: 1;
+			padding: 0;
+			border: none;
+			cursor: pointer;
+			transition: opacity ease-out $tr;
 
-			&.point-nw {	// Top-left
-				top: 0;
-				left: 0;
-				border-top: 2px solid $white;
-				border-left: 2px solid $white
+			&:hover {
+				opacity: 0.7
 			}
 
-			&.point-ne {	// Top-right
-				top: 0;
-				right: 0;
-				border-top: 2px solid $white;
-				border-right: 2px solid $white
+			&.section-add,
+			&.section-remove {
+				color: $bright-yellow;
+				margin-left: auto
 			}
 
-			&.point-sw {	// Bottom-left
-				bottom: 0;
-				left: 0;
-				border-left: 2px solid $white;
-				border-bottom: 2px solid $white
+			&.section-remove {
+				display: none
 			}
 
-			&.point-se {	// Bottom-right
-				bottom: 0;
-				right: 0;
-				border-right: 2px solid $white;
-				border-bottom: 2px solid $white
+			&.section-drag {
+				display: none;
+				position: absolute;
+				top: 50%;
+				left: 100%;
+				transform: translateY(-50%);
+				color: #96AAAE;
+				cursor: grab;
+
+				&:active {
+					cursor: grabbing
+				}
 			}
 		}
 	}
