--- a/src/scss/components/helpers.scss
+++ b/src/scss/components/helpers.scss
@@ -72,6 +72,10 @@
 	align-items: center
 }
 
+.align-end {
+	align-items: flex-end
+}
+
 .note-with-icon {
 	position: relative;
 	padding-left: 19px;
