--- a/src/scss/pages/new-memory.scss
+++ b/src/scss/pages/new-memory.scss
@@ -7,10 +7,11 @@
 
 @import '../../../node_modules/cropperjs/dist/cropper.min';
 @import '../new-memory/step-1';
-
 @import '../new-memory/step-2';
+@import '../new-memory/step-3';
 
 .new-memory {
+	flex-grow: 1;
 	background-color: $a-bit-blue-white;
 	padding-bottom: 87px;
 
@@ -19,7 +20,13 @@
 		transition: opacity ease-out $tr;
 
 		&.active {
-			display: block
+			display: flex;
+			flex: 1;
+
+			.container {
+				display: flex;
+				flex-grow: 1
+			}
 		}
 
 		&-0 .new-memory-step-desc {
@@ -30,8 +37,14 @@
 			margin-bottom: 20px
 		}
 
-		&-2 .new-memory-step-desc {
+		&-2 .new-memory-step-desc,
+		&-3 .new-memory-step-desc {
 			max-width: 630px
+		}
+
+		&-3 .new-memory-step-desc,
+		&-4 .new-memory-step-desc {
+			margin-bottom: 40px
 		}
 
 		&-suptitle {
@@ -56,194 +69,50 @@
 		}
 	}
 
-	.sections {
-		&-wrapper {
-			max-width: 955px;
-			padding: 53px 95px 53px 0;
+	.step-media {
+		.form-white {
+			max-width: 738px;
+			padding: 45px 108px 47px 0;
+			margin-top: 0
+		}
+	}
+}
 
-			button {
-				background-color: transparent;
-				padding: 0;
-				border: none;
-				cursor: pointer;
-				transition: opacity ease-out $tr;
+.form-white {
+	position: relative;
+	width: 100%;
+	max-width: 522px;
+	flex-grow: 1;
+	background-color: $white;
+	padding: 40px 109px 51px 0;
+	border-top-right-radius: $radius-theme;
+	margin-top: 40px;
 
-				&:hover {
-					opacity: 0.7
-				}
+	&::before {
+		display: none;
+		content: '';
+		position: absolute;
+		top: 0;
+		right: 100%;
+		width: calc((100vw - 720px) / 2);
+		height: 100%;
+		background-color: $white;
+		border-bottom-left-radius: $radius-theme;
 
-				&.section-add,
-				&.section-remove {
-					color: $bright-yellow;
-					margin-left: auto
-				}
-
-				&.section-remove {
-					display: none
-				}
-
-				&.section-drag {
-					position: absolute;
-					top: 50%;
-					left: 100%;
-					transform: translateY(-50%);
-					color: #96AAAE;
-					cursor: grab;
-					opacity: 0;
-
-					&:active {
-						cursor: grabbing
-					}
-				}
-
-				svg {
-					display: block
-				}
-			}
+		@media (min-width: $md) {
+			display: block
 		}
 
-		&-sidebar {
-			width: 245px;
-			padding-right: 24px
+		@media (min-width: $lg) {
+			width: calc((100vw - 950px) / 2 - 8px)
 		}
 
-		&-added {
-			margin-bottom: 40px;
-
-			.section {
-				color: $very-dark-green;
-				background-color: $a-bit-blue-white;
-
-				&:hover button.section-drag {
-					opacity: 1
-				}
-
-				button.section-add {
-					display: none
-				}
-
-				button.section-remove {
-					display: block
-				}
-			}
-		}
-
-		&-content {
-			// Minus sidebar column width.
-			width: calc(100% - 245px);
-			padding-left: 55px
-		}
-
-		&-title {
-			font-size: $fs-sm;
-			margin-bottom: 8px
+		@media (min-width: $xl) {
+			width: calc((100vw - 1280px) / 2 - 8px)
 		}
 	}
 
-	.section {
-		position: relative;
-		font-size: $fs-sm;
-		color: $a-bit-blue-white;
-		padding: 12px 11px 12px 20px;
-		border: 3px solid $a-bit-blue-white;
-		border-radius: $radius-langs;
-		background-color: $very-dark-green;
-
-		&:hover {
-			.section-drag {
-				opacity: 1
-			}
-		}
-
-		&:not(:last-child) {
-			margin-bottom: 2px
-		}
-
-		&-label {
-			width: calc(100% - 38px)
-		}
-
-		&-content {
-			position: relative;
-			width: 100%;
-			color: $black-for-text;
-			padding: 27px 59px 19px 25px;
-			border-radius: $radius-input;
-			cursor: pointer;
-			transition: background-color ease-out $tr;
-
-			&:hover {
-				background-color: $a-bit-blue-white;
-
-				button {
-					&.section-drag {
-						opacity: 1
-					}
-
-					&.section-remove {
-						display: block
-					}
-				}
-			}
-
-			&.active {
-				background-color: $a-bit-blue-white;
-
-				.section-content-text {
-					height: 180px
-				}
-
-				button.section-remove {
-					display: block
-				}
-			}
-
-			&-title {
-				margin-bottom: 20px
-			}
-
-			&-text {
-				width: 100%;
-				height: 21px;
-				font-family: $ff;
-				font-size: $fs-md;
-				line-height: $lh-4;
-				border: none;
-				resize: none;
-				background-color: transparent;
-				padding: 0;
-				caret-color: $bright-yellow;
-				transition: height ease-out $tr;
-
-				&::-webkit-scrollbar {
-					width: 3px
-				}
-
-				&::-webkit-scrollbar-track {
-					-webkit-box-shadow: none
-				}
-
-				&::-webkit-scrollbar-thumb {
-					background-color: $bright-yellow;
-					outline: none
-				}
-			}
-
-			button {
-				&.section-drag {
-					top: 33px;
-					left: auto;
-					right: 100%;
-					transform: none
-				}
-
-				&.section-remove {
-					position: absolute;
-					top: 33px;
-					right: 29px;
-					color: #96AAAE
-				}
-			}
-		}
+	.label-file {
+		margin: 19px 0 0
 	}
 }
