--- a/src/scss/pages/new-memory.scss
+++ b/src/scss/pages/new-memory.scss
@@ -185,6 +185,7 @@
 
 	&-loader {
 		width: 100%;
+		padding-bottom: 21px;
 
 		&-percents {
 			font-size: 32px;
@@ -196,6 +197,63 @@
 			font-size: $fs-lg;
 			color: $very-dark-green;
 			margin-bottom: 6px
+		}
+
+		&-cancel.btn {
+			color: $red;
+			padding: 14px 16px
+		}
+
+		progress {
+			margin-bottom: 20px
+		}
+	}
+
+	&-images {
+		width: 100%;
+		gap: 20px
+	}
+
+	&-img {
+		&-loaded {
+			position: relative;
+			width: calc(50% - 10px);
+			height: 240px;
+			border-radius: 28px;
+
+			img {
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				object-fit: cover;
+				object-position: center;
+				border-radius: 28px
+			}
+		}
+
+		&-delete {
+			position: absolute;
+			top: 20px;
+			right: 20px;
+			width: 34px;
+			height: 34px;
+			border-radius: 50%;
+			color: #96AAAE;
+			background-color: $white;
+			cursor: pointer;
+			transition: ease-out color $tr;
+
+			svg {
+				width: 24px;
+				height: auto;
+				pointer-events: none
+			}
+
+			&:hover {
+				color: $red
+			}
 		}
 	}
 
@@ -236,5 +294,49 @@
 			background-color: $dark-yellow;
 			border-radius: 4px
 		}
+	}
+}
+
+.popup-sure {
+	position: absolute;
+	top: 0;
+	left: calc(100% + 9px);
+	min-width: 223px;
+	background-color: $white;
+	box-shadow: 3px 3px 6px 0 rgba(102, 119, 131, 0.10);
+	border-radius: $radius-input;
+	padding: 15px 20px 2px;
+	z-index: 1;
+
+	&-text {
+		font-size: $fs-sm;
+		color: $very-dark-green;
+		margin-bottom: 21px;
+		text-align: center
+	}
+
+	&-buttons {
+		justify-content: space-between;
+
+		button {
+			width: calc(50% - 4px);
+			background-color: transparent;
+			border: none;
+			padding: 10px 12px;
+			cursor: pointer;
+			transition: opacity ease-out $tr;
+
+			&:hover {
+				opacity: 0.7
+			}
+		}
+	}
+
+	&-cancel {
+		color: $dark-yellow
+	}
+
+	&-apply {
+		color: $red
 	}
 }
