--- a/src/scss/pages/new-memory.scss
+++ b/src/scss/pages/new-memory.scss
@@ -340,3 +340,60 @@
 		color: $red
 	}
 }
+
+.notification {
+	position: absolute;
+	top: 250px;
+	left: 100%;
+	width: 100%;
+	max-width: 490px;
+	transition: transform ease-out $tr;
+	border-radius: $radius-input;
+	padding: 12px 16px 12px 38px;
+	line-height: $lh-base;
+	color: $very-dark-green;
+	pointer-events: none;
+	z-index: 10;
+
+	&::before {
+		content: '';
+		position: absolute;
+		top: 50%;
+		left: 16px;
+		transform: translateY(-50%);
+		display: block;
+		width: 16px;
+		height: 16px;
+		background-size: contain;
+		background-position: center;
+		background-repeat: no-repeat
+	}
+
+	&.success {
+		background-color: #E0F6DE;
+
+		&::before {
+			background-image: url('../../img/check-green.svg')
+		}
+	}
+
+	&.error {
+		background-color: #FED9CC;
+
+		&::before {
+			background-image: url('../../img/error-red.svg')
+		}
+	}
+
+	&.warning {
+		background-color: #FFF4CE;
+
+		&::before {
+			background-image: url('../../img/warning-yellow.svg')
+		}
+	}
+
+	&.show {
+		transform: translateX(-100%)
+	}
+}
