--- a/src/scss/pages/new-memory.scss
+++ b/src/scss/pages/new-memory.scss
@@ -139,6 +139,7 @@
 }
 
 .droparea {
+	position: relative;
 	width: 100%;
 	min-height: 300px;
 	background-color: $white;
@@ -184,8 +185,15 @@
 	}
 
 	&-loader {
+		position: absolute;
+		top: 0;
+		left: 0;
 		width: 100%;
+		height: 100%;
+		background-color: $white;
+		border-radius: inherit;
 		padding-bottom: 21px;
+		z-index: 5;
 
 		&-percents {
 			font-size: 32px;
@@ -211,7 +219,21 @@
 
 	&-images {
 		width: 100%;
-		gap: 20px
+		gap: 20px;
+
+		&-load {
+			width: calc(50% - 10px);
+			height: 240px;
+			border-radius: 28px;
+			border: 0.5px solid $very-dark-green;
+			padding: 10px 10px 28px;
+
+			svg {
+				width: 48px;
+				height: 48px;
+				margin-bottom: 46px
+			}
+		}
 	}
 
 	&-img {
@@ -342,7 +364,7 @@
 }
 
 .notification {
-	position: absolute;
+	position: fixed;
 	top: 250px;
 	left: 100%;
 	width: 100%;
@@ -395,5 +417,15 @@
 
 	&.show {
 		transform: translateX(-100%)
+	}
+}
+
+.label-button {
+	input[type="file"] {
+		position: absolute;
+		width: 0;
+		height: 0;
+		opacity: 0;
+		z-index: -1
 	}
 }
