--- a/src/scss/pages/new-memory.scss
+++ b/src/scss/pages/new-memory.scss
@@ -217,7 +217,8 @@
 		}
 	}
 
-	&-images {
+	&-images,
+	&-videos {
 		width: 100%;
 		gap: 20px;
 
@@ -236,7 +237,8 @@
 		}
 	}
 
-	&-img {
+	&-img,
+	&-video {
 		&-loaded {
 			position: relative;
 			width: calc(50% - 10px);
@@ -252,6 +254,13 @@
 				object-fit: cover;
 				object-position: center;
 				border-radius: 28px
+			}
+
+			video {
+				display: block;
+				width: 100%;
+				height: 100%;
+				object-fit: cover
 			}
 		}
 
@@ -276,6 +285,29 @@
 			&:hover {
 				color: $red
 			}
+		}
+	}
+
+	&-video {
+		&-wrapper {
+			width: 100%;
+			height: 180px;
+			border-radius: 28px 28px 0 0;
+			margin-bottom: 16px;
+
+			video {
+				border-radius: inherit
+			}
+		}
+
+		&-title {
+			margin-bottom: 2px
+		}
+
+		&-duration {
+			font-size: $fs-sm;
+			color: $green;
+			padding-bottom: 4px
 		}
 	}
 
