--- a/src/scss/pages/new-memory.scss
+++ b/src/scss/pages/new-memory.scss
@@ -338,39 +338,60 @@
 
 	&-thumb,
 	&-thumb-load {
+		position: relative;
 		width: calc((100% - 30px) / 4);
 		height: 100px;
 		padding: 10px;
 		border: 0.5px solid $very-dark-green;
 		border-radius: 16px;
+		cursor: pointer;
 		transition:
 			border-width ease-out $tr,
-			border-color ease-out $tr
-	}
-
-	&-thumb.active {
-		border: 2px solid $bright-yellow
-	}
-
-	&-thumb-load {
-		cursor: pointer;
-		transition: opacity ease-out $tr;
+			border-color ease-out $tr,
+			opacity ease-out $tr;
 
 		&:hover {
-			opacity: 0.7
+			opacity: 0.75
+		}
+	}
+
+	&-thumb {
+		overflow: hidden;
+
+		&.active {
+			border: 2px solid $bright-yellow
 		}
 
-		&-text {
-			display: block;
-			font-size: $fs-xs;
-			line-height: $lh-2;
-			text-align: center;
-			margin-top: 10px
+		&-load {
+			cursor: pointer;
+			transition: opacity ease-out $tr;
+
+			&:hover {
+				opacity: 0.7
+			}
+
+			&-text {
+				display: block;
+				font-size: $fs-xs;
+				line-height: $lh-2;
+				text-align: center;
+				margin-top: 10px
+			}
+
+			svg {
+				width: 24px;
+				height: 24px
+			}
 		}
 
-		svg {
-			width: 24px;
-			height: 24px
+		&-img {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+			object-position: center
 		}
 	}
 
