feat: add redirect to Login page if Visitor is unauthorized.

--- a/src/scss/pages/new-memory.scss
+++ b/src/scss/pages/new-memory.scss
@@ -315,6 +315,7 @@
 		width: 100%;
 		border-radius: inherit;
 		background-color: $white;
+		padding-top: 72px;
 
 		&-text {
 			font-size: $fs-lg;
