--- a/src/scss/pages/auth.scss
+++ b/src/scss/pages/auth.scss
@@ -194,3 +194,39 @@
 .activation-success {
 	width: 100%
 }
+
+.memory-tip {
+	position: relative;
+	width: 100%;
+	max-width: 373px;
+	font-size: 14px;
+	color: $very-dark-green;
+	background-color: $green;
+	border-radius: 16px;
+	padding: 24px;
+	margin-bottom: 25px;
+
+	button {
+		position: absolute;
+		top: 12px;
+		right: 12px;
+		display: block;
+		width: 16px;
+		height: 16px;
+		cursor: pointer;
+		transition: opacity ease-out $tr;
+		background-color: transparent;
+		border: none;
+		padding: 0;
+
+		&:hover {
+			opacity: 0.7
+		}
+
+		svg {
+			display: block;
+			width: 100%;
+			height: 100%
+		}
+	}
+}
