feat: add step 5 with save to acf; some refactoring.

--- a/src/scss/new-memory/step-2.scss
+++ b/src/scss/new-memory/step-2.scss
@@ -192,6 +192,7 @@
 				font-family: $ff;
 				font-size: $fs-md;
 				line-height: $lh-4;
+				color: $black-for-text;
 				border: none;
 				resize: none;
 				background-color: transparent;
