--- a/src/scss/new-memory/step-3.scss
+++ b/src/scss/new-memory/step-3.scss
@@ -17,6 +17,7 @@
 		textarea {
 			flex-grow: 1;
 			width: 100%;
+			color: $black-for-text;
 			font-family: $ff;
 			background-color: transparent;
 			border: none;
