--- a/src/scss/components/forms.scss
+++ b/src/scss/components/forms.scss
@@ -16,6 +16,32 @@ legend.legend {
 	}
 }
 
+.legend-tip {
+	background-color: transparent;
+	border: none;
+	padding: 0;
+	margin-left: 17px;
+	cursor: pointer;
+	transition: opacity ease-out $tr;
+
+	&:hover {
+		opacity: 0.7
+	}
+
+	&-text {
+		font-size: $fs-sm;
+		line-height: 1.6;
+		color: #D1AE61
+	}
+
+	svg {
+		display: block;
+		width: 20px;
+		height: 20px;
+		margin-right: 7px
+	}
+}
+
 label.label {
 	position: relative;
 	display: block;
@@ -153,14 +179,13 @@ label.label {
 			color: $very-dark-green
 		}
 
-		input {
-			&[type="text"],
-			&[type="password"],
-			&[type="date"],
-			&[type="email"] {
-				color: $very-dark-green;
-				border-color: $very-dark-green
-			}
+		textarea,
+		input[type="text"],
+		input[type="password"],
+		input[type="date"],
+		input[type="email"] {
+			color: $very-dark-green;
+			border-color: $very-dark-green;
 
 			&::placeholder {
 				color: rgba(1, 28, 26, 0.51)
@@ -176,27 +201,41 @@ label.label {
 	padding: 0 16px 10px
 }
 
-input {
-	&[type="text"],
-	&[type="password"],
-	&[type="date"],
-	&[type="email"] {
-		width: 100%;
-		height: 48px;
-		font-size: $fs-md;
-		color: $white;
-		background-color: transparent;
-		border: 0.5px solid $white;
-		border-radius: $radius-input;
-		padding: 0 16px;
-		transition: border-color ease-out $tr;
+textarea,
+input[type="text"],
+input[type="password"],
+input[type="date"],
+input[type="email"] {
+	width: 100%;
+	height: 48px;
+	font-family: $ff;
+	font-size: $fs-md;
+	color: $white;
+	background-color: transparent;
+	border: 0.5px solid $white;
+	border-radius: $radius-input;
+	padding: 0 16px;
+	transition: border-color ease-out $tr;
 
-		&:active,
-		&:focus {
-			border-color: $bright-yellow
-		}
+	&:active,
+	&:focus {
+		border-color: $bright-yellow
 	}
 
+	&::placeholder {
+		font-family: $ff;
+		font-size: $fs-md;
+		color: rgba(156, 180, 186, 0.51)
+	}
+}
+
+textarea {
+	height: 140px;
+	padding: 12px 16px;
+	resize: vertical
+}
+
+input {
 	&[type="checkbox"] {
 		position: absolute;
 		width: 0;
@@ -223,12 +262,6 @@ input {
 		opacity: 0;
 		top: -10vh;
 		left: -10vw
-	}
-
-	&::placeholder {
-		font-family: $ff;
-		font-size: $fs-md;
-		color: rgba(156, 180, 186, 0.51)
 	}
 }
 
