--- a/src/scss/components/forms.scss
+++ b/src/scss/components/forms.scss
@@ -42,6 +42,11 @@ legend.legend {
 	}
 }
 
+.legend-desc {
+	color: $very-dark-green;
+	margin: 9px 0 20px
+}
+
 label.label {
 	position: relative;
 	display: block;
@@ -151,6 +156,8 @@ label.label {
 		input {
 			&[type="text"],
 			&[type="password"],
+			input[type="date"],
+			input[type="url"],
 			&[type="email"] {
 				color: $error-primary;
 				border-color: $error-primary
@@ -183,6 +190,7 @@ label.label {
 		input[type="text"],
 		input[type="password"],
 		input[type="date"],
+		input[type="url"],
 		input[type="email"] {
 			color: $very-dark-green;
 			border-color: $very-dark-green;
@@ -205,6 +213,7 @@ textarea,
 input[type="text"],
 input[type="password"],
 input[type="date"],
+input[type="url"],
 input[type="email"] {
 	width: 100%;
 	height: 48px;
