--- a/src/scss/pages/new-memory.scss
+++ b/src/scss/pages/new-memory.scss
@@ -82,7 +82,15 @@
 		position: relative;
 
 		&.filled {
-			padding-right: 36px
+			padding-right: 36px;
+
+			.media-link-delete {
+				display: block
+			}
+		}
+
+		&:not(:first-child) .media-link-delete {
+			display: block
 		}
 	}
 
@@ -105,6 +113,7 @@
 	}
 
 	.media-link-delete {
+		display: none;
 		position: absolute;
 		top: 40px;
 		right: 0;
