feat: save several videos (in small window).

--- a/src/scss/new-memory/step-4.scss
+++ b/src/scss/new-memory/step-4.scss
@@ -1,5 +1,21 @@
 .new-memory {
 	.step-media {
+		&-link {
+			position: relative;
+
+			&.filled {
+				padding-right: 36px;
+
+				.media-link-delete {
+					display: block
+				}
+			}
+
+			&:not(:first-child) .media-link-delete {
+				display: block
+			}
+		}
+
 		.form-white {
 			max-width: 738px;
 			padding: 45px 108px 47px 0;
@@ -8,6 +24,43 @@
 
 		fieldset {
 			margin-bottom: 40px
+		}
+	}
+
+	.media-links-add {
+		background-color: transparent;
+		border: none;
+		padding: 0;
+		color: $dark-yellow;
+		cursor: pointer;
+		font-family: $ff;
+		transition: color ease-out $tr;
+
+		&:hover {
+			color: $bright-yellow
+		}
+
+		svg {
+			margin-right: 5px
+		}
+	}
+
+	.media-link-delete {
+		display: none;
+		position: absolute;
+		top: 40px;
+		right: 0;
+		width: 24px;
+		height: 24px;
+		background-color: transparent;
+		padding: 0;
+		border: none;
+		color: #96AAAE;
+		cursor: pointer;
+		transition: color ease-out $tr;
+
+		&:hover {
+			color: $red
 		}
 	}
 }
