--- a/src/scss/pages/new-memory.scss
+++ b/src/scss/pages/new-memory.scss
@@ -11,6 +11,7 @@
 @import '../new-memory/step-3';
 @import '../new-memory/step-4';
 @import '../new-memory/step-5';
+@import '../new-memory/step-6';
 
 .new-memory {
 	flex-grow: 1;
