--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,5 +13,6 @@
 // Theme common styles.
 @import 'header/header';
 @import 'header/menu';
+@import 'header/profile';
 @import 'footer/footer';
 @import 'footer/menu';
