feat: add profile settings save

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,6 +9,7 @@
 @import 'components/base';
 @import 'components/forms';
 @import 'components/buttons';
+@import 'components/notifications';
 
 // Theme common styles.
 @import 'header/header';
