--- a/src/scss/pages/profile-settings.scss
+++ b/src/scss/pages/profile-settings.scss
@@ -52,9 +52,10 @@
 			background-color: $white;
 			border-radius: $radius-theme;
 			padding: 30px;
+			margin-bottom: 57px;
 
-			&:not(:last-child) {
-				margin-bottom: 57px
+			&:last-child {
+				margin-bottom: 20px
 			}
 		}
 
@@ -70,5 +71,85 @@
 			margin: 0 0 20px;
 			float: left
 		}
+	}
+
+	&-plan {
+		width: 100%;
+		max-width: 847px;
+		background-color: $white;
+		border-radius: $radius-theme;
+		padding: 30px
+	}
+
+	&-heading {
+		display: block;
+		width: 100%;
+		font-family: $ff-title;
+		font-size: 30px;
+		font-weight: $fw-semibold;
+		line-height: 1;
+		color: $very-dark-green;
+		margin: 0 0 20px
+	}
+
+	&-pages {
+		column-gap: 20px;
+		row-gap: 28px
+	}
+}
+
+.profile-memory-preview {
+	width: 100%;
+	padding-bottom: 28px;
+	border-bottom: 1px solid #8FB7C5;
+
+	@media (min-width: $md) {
+		width: calc(50% - 10px)
+	}
+
+	&-thumb {
+		position: relative;
+		width: 70px;
+		height: 90px;
+		border-radius: 35px;
+		overflow: hidden;
+
+		&::after {
+			content: '';
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			background: linear-gradient( 2deg, $very-dark-green 0%, rgba(1, 28, 26, 0.00) 100%), transparent 50%
+		}
+
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover
+		}
+	}
+
+	&-info {
+		width: calc(100% - 70px);	// Minus thumb width.
+		padding-left: 20px;
+		color: $very-dark-green
+	}
+
+	&-name {
+		font-family: $ff-title;
+		font-size: $fs-lg;
+		font-weight: $fw-semibold;
+		margin-bottom: 13px
+	}
+
+	&-bottom .btn {
+		margin-left: auto
+	}
+
+	&-type {
+		font-size: $fs-sm;
+		line-height: 1.6
 	}
 }
