--- a/src/scss/pages/profile.scss
+++ b/src/scss/pages/profile.scss
@@ -26,54 +26,135 @@
 
 	&-title {
 		font-family: $ff-title;
-		font-size: 40px;
-		line-height: 2.5;
+		font-size: 30px;
+		line-height: normal;
 		color: $very-dark-green;
-		margin-bottom: 11px
-	}
+		margin-bottom: 20px;
+		text-align: center;
 
-	&-list {
-		gap: 20px
-	}
-
-	.page-created-info {
-		background-color: #131414;
-		border-radius: 30px 30px 0 0;
-		padding-bottom: 53px
-	}
-
-	.page-created-thumb-border {
-		border-color: #C3A195;
-
-		span {
-			position: absolute;
-			font-size: 10px;
-			line-height: normal;
-			color: $white;
-			background-color: #131414;
-			padding: 0 9px;
-			top: 0;
-			left: 50%;
-			transform: translate(-50%, -50%)
+		@media (min-width: $xl) {
+			font-size: 40px;
+			line-height: 2.5;
+			margin-bottom: 11px;
+			text-align: left
 		}
 	}
 
-	.page-created-fullname {
-		position: relative;
-		width: 100%;
-		font-size: 32px;
-		color: #C3A195;
-		padding: 0 13px;
-		margin: 0
+	&-list {
+		gap: 20px;
+		margin-bottom: 49px
 	}
 
-	.page-created-lastname {
-		width: 100%;
-		align-items: flex-end;
-		justify-content: space-between;
+	.page-created {
+		&-info {
+			background-color: #131414;
+			padding: 0 0 23px;
+			border-radius: 30px 30px 0 0;
 
-		span {
-			padding: 0 5px
+			@media (min-width: $xl) {
+				border-radius: 30px 30px 0 0;
+				padding: 0 37px 53px
+			}
+		}
+
+		&-thumb {
+			width: 181px;
+			height: 230px;
+			transform: translateY(45px);
+
+			@media (min-width: $xl) {
+				width: 226px;
+				height: 288px
+			}
+
+			&-border {
+				border-color: #C3A195;
+
+				span {
+					position: absolute;
+					font-size: 10px;
+					line-height: normal;
+					color: $white;
+					background-color: #131414;
+					padding: 0 9px;
+					top: 0;
+					left: 50%;
+					transform: translate(-50%, -50%)
+				}
+			}
+
+			&-img {
+				width: 144px;
+				height: 180px;
+
+				@media (min-width: $xl) {
+					width: 180px;
+					height: 225px
+				}
+			}
+		}
+
+		&-fullname {
+			position: relative;
+			width: 100%;
+			font-size: 32px;
+			color: #C3A195;
+			padding: 0 13px;
+			margin: 0
+		}
+
+		&-lastname {
+			width: 100%;
+			align-items: flex-end;
+			justify-content: center;
+
+			@media (min-width: $xl) {
+				justify-content: space-between
+			}
+
+			.memory-card-date {
+				display: none;
+				font-family: $ff;
+				font-weight: $fw-regular;
+				font-size: $fs-xs;
+				line-height: normal;
+				color: $white;
+				padding-bottom: 4px;
+
+				@media (min-width: $xl) {
+					display: block
+				}
+
+				span {
+					padding: 0 5px
+				}
+
+				&.born {
+					margin-right: auto
+				}
+
+				&.died {
+					margin-left: auto
+				}
+			}
+		}
+
+		&-dates {
+			width: 100%;
+			font-family: $ff-title;
+			font-size: $fs-xs;
+			font-weight: $fw-regular;
+			line-height: normal;
+			color: $white;
+			margin-top: 17px;
+
+			span {
+				margin: 0 21px
+			}
+
+			@media (min-width: $xl) {
+				display: none
+			}
 		}
 	}
 }
@@ -103,6 +184,7 @@
 		padding: 20px;
 		border: 1px solid $bright-yellow;
 		border-radius: 19px;
+		text-align: center;
 		transition: opacity ease-out $tr;
 
 		&:hover {
@@ -117,25 +199,12 @@
 		}
 	}
 
-	&-date {
-		font-family: $ff;
-		font-weight: $fw-regular;
-		font-size: $fs-xs;
-		line-height: normal;
-		color: $white;
-		padding-bottom: 4px;
-
-		&.born {
-			margin-right: auto
-		}
-
-		&.died {
-			margin-left: auto
-		}
-	}
-
 	&-bottom {
-		padding: 23px 30px 30px
+		padding: 20px;
+
+		@media (min-width: $xl) {
+			padding: 23px 30px 30px
+		}
 	}
 
 	&-title {
@@ -143,7 +212,11 @@
 		font-size: $fs-xl;
 		line-height: 1;
 		color: $very-dark-green;
-		margin-bottom: 29px
+		margin-bottom: 20px;
+
+		@media (min-width: $xl) {
+			margin-bottom: 29px
+		}
 	}
 
 	&-actions {
@@ -155,6 +228,14 @@
 
 			&:last-child {
 				margin-left: auto
+			}
+
+			&.simple span {
+				display: none;
+
+				@media (min-width: $xl) {
+					display: inline-block
+				}
 			}
 		}
 	}
