feat: add memory page top part with text animation.

--- a/src/scss/components/helpers.scss
+++ b/src/scss/components/helpers.scss
@@ -117,3 +117,21 @@
 		}
 	}
 }
+
+.hide-after {
+	&-lg {
+		@media (min-width: $lg) {
+			display: none
+		}
+	}
+}
+
+.hide-before {
+	&-lg {
+		display: none;
+
+		@media (min-width: $lg) {
+			display: block
+		}
+	}
+}
