--- a/src/scss/pages/memory.scss
+++ b/src/scss/pages/memory.scss
@@ -1,3 +1,4 @@
+@import '../../../node_modules/lightbox2/dist/css/lightbox.css';
 @import '../components/vars';
 
 body.single-memory_page {
@@ -194,6 +195,104 @@ body.single-memory_page {
 	// MEDIA SECTION STYLES
 
 	&-media {
-		padding: 103px 0 110px
+		padding: 103px 0 110px;
+
+		&-title {
+			font-size: 24px;
+			line-height: normal;
+			color: $black-for-text;
+			margin-bottom: 158px
+		}
+	}
+
+	.media-photos {
+		&-list {
+			column-gap: 20px;
+			row-gap: 30px
+		}
+
+		&-more {
+			margin-top: 24px;
+
+			button {
+				font-family: $ff;
+				font-size: $fs-md;
+				line-height: normal;
+				text-decoration: underline;
+				color: $black-for-text;
+				background-color: transparent;
+				border: none;
+				padding: 0;
+				cursor: pointer;
+
+				&:hover {
+					text-decoration: none
+				}
+			}
+		}
+	}
+
+	.media-photo {
+		position: relative;
+		width: 100%;
+		overflow: hidden;
+
+		@media (min-width: $sm) {
+			width: calc(50% - 10px)
+		}
+
+		@media (min-width: $lg) {
+			width: calc((100% - 60px) / 4)
+		}
+
+		&-inner {
+			position: relative;
+			width: 100%;
+			height: 250px;
+
+			@media (min-width: $sm) {
+				height: 300px
+			}
+
+			@media (min-width: $lg) {
+				height: 460px
+			}
+		}
+
+		&:hover {
+			cursor: none;
+
+			.media-photo-overlay,
+			.media-photo-cursor-text {
+				opacity: 1
+			}
+		}
+
+		&-overlay {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			background: linear-gradient(0deg, rgba(1, 28, 26, 0.50) 0%, rgba(1, 28, 26, 0.50) 100%);
+			opacity: 0;
+			transition: opacity ease-out $tr
+		}
+
+		&-cursor-text {
+			position: absolute;
+			font-family: $ff-title;
+			font-size: 40px;
+			line-height: 2.5;
+			font-weight: $fw-semibold;
+			color: $bright-yellow;
+			opacity: 0
+		}
+
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover
+		}
 	}
 }
