--- a/src/scss/pages/memory.scss
+++ b/src/scss/pages/memory.scss
@@ -201,7 +201,11 @@ body.single-memory_page {
 			font-size: 24px;
 			line-height: normal;
 			color: $black-for-text;
-			margin-bottom: 158px
+			margin-bottom: 80px;
+
+			@media (min-width: $lg) {
+				margin-bottom: 158px
+			}
 		}
 	}
 
@@ -248,13 +252,9 @@ body.single-memory_page {
 		&-inner {
 			position: relative;
 			width: 100%;
-			height: 250px;
+			height: 400px;
 
-			@media (min-width: $sm) {
-				height: 300px
-			}
-
-			@media (min-width: $lg) {
+			@media (min-width: $md) {
 				height: 460px
 			}
 		}
@@ -276,7 +276,8 @@ body.single-memory_page {
 			height: 100%;
 			background: linear-gradient(0deg, rgba(1, 28, 26, 0.50) 0%, rgba(1, 28, 26, 0.50) 100%);
 			opacity: 0;
-			transition: opacity ease-out $tr
+			transition: opacity ease-out $tr;
+			pointer-events: none
 		}
 
 		&-cursor-text {
@@ -286,10 +287,135 @@ body.single-memory_page {
 			line-height: 2.5;
 			font-weight: $fw-semibold;
 			color: $bright-yellow;
-			opacity: 0
+			opacity: 0;
+			pointer-events: none
 		}
 
 		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover
+		}
+	}
+
+	.media-videos {
+		margin-top: 79px;
+
+		&-list {
+			column-gap: 20px;
+			row-gap: 30px
+		}
+	}
+
+	.media-video {
+		width: 100%;
+
+		@media (min-width: $md) {
+			width: calc(50% - 10px)
+		}
+
+		@media (min-width: $lg) {
+			width: calc((100% - 40px) / 3)
+		}
+
+		&-top {
+			position: relative;
+			width: 100%;
+			overflow: hidden;
+
+			&:hover {
+				cursor: none;
+
+				.media-photo-overlay,
+				.media-photo-cursor-text {
+					opacity: 1
+				}
+			}
+
+			&.playing {
+				cursor: auto;
+
+				.media-photo-overlay,
+				.media-photo-cursor-text {
+					opacity: 0
+				}
+			}
+		}
+
+		&-bottom {
+			margin-top: 19px
+		}
+
+		&-name {
+			color: $black-for-text;
+			line-height: normal;
+			margin-bottom: 2px
+		}
+
+		&-more {
+			.media-video-top {
+				&:hover {
+					cursor: pointer;
+
+					.media-video-more-text {
+						opacity: 0.7
+					}
+				}
+			}
+
+			&-text {
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				color: $green;
+				line-height: normal;
+				transition: opacity ease-out $tr;
+
+				.count {
+					font-family: $ff-title;
+					font-size: 60px;
+					line-height: $lh-1;
+					font-weight: $fw-semibold;
+					color: $light-green;
+					margin: 9px 0 6px;
+
+					@media (min-width: $xl) {
+						font-size: 90px
+					}
+				}
+
+				div:last-child {
+					color: $bright-yellow
+				}
+			}
+
+			.media-photo-overlay {
+				background-color: $very-dark-green;
+				opacity: 1
+			}
+		}
+
+		.media-photo-inner {
+			position: relative;
+			width: 100%;
+			height: 50vw;
+
+			@media (min-width: $md) {
+				height: 24vw
+			}
+
+			@media (min-width: $lg) {
+				height: 16vw
+			}
+
+			@media (min-width: $xl) {
+				height: 240px
+			}
+		}
+
+		video {
 			width: 100%;
 			height: 100%;
 			object-fit: cover
