--- a/src/scss/pages/new-memory.scss
+++ b/src/scss/pages/new-memory.scss
@@ -20,6 +20,7 @@
 
 	&-step {
 		display: none;
+		padding-top: 39px;
 		transition: opacity ease-out $tr;
 
 		&.active {
@@ -32,8 +33,12 @@
 			}
 		}
 
-		&-0 .new-memory-step-desc {
-			font-size: $fs-lg
+		&-0 {
+			padding-top: 76px;
+
+			.new-memory-step-desc {
+				font-size: $fs-lg
+			}
 		}
 
 		&-1 .new-memory-step-desc {
