fix: lightbox styles import

--- a/src/scss/pages/memory.scss
+++ b/src/scss/pages/memory.scss
@@ -1,5 +1,5 @@
+@import '../../../node_modules/lightbox2/dist/css/lightbox.min';
 @import '../components/vars';
-@import '../../../node_modules/lightbox2/dist/css/lightbox.css';
 
 body.single-memory_page {
 	background-color: $very-dark-green;
